--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "firebase": "^9.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
