--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "reselect": "^4.1.7",
     "sass": "^1.58.3",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
